# faceplate

./: .gitignore  CHANGELOG.md  README.md  package.json  sonar-project.properties
.cursor/rules/: specify-rules.mdc
.github/workflows/: protect-main.yml  quality.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: alembic.ini  coverage.xml  pyproject.toml
backend/app/: __init__.py
backend/app/auth/: __init__.py  exceptions.py  jwks.py  jwt.py
backend/app/core/: config.py  secrets.py
backend/app/db/: __init__.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py
backend/app/models/: __init__.py  base.py  conversation.py  mcp_config.py  message.py  user.py
backend/tests/: __init__.py  conftest.py  test_placeholder.py
backend/tests/auth/: conftest.py  test_jwks.py  test_jwt.py
backend/tests/core/: conftest.py  test_config.py  test_secrets.py
backend/tests/db/: test_cascade.py  test_migrations.py  test_pool.py
backend/tests/models/: test_conversation.py  test_mcp_config.py  test_message.py  test_user.py
docs/: architecture.md  backend.md  deployment.md  development.md  frontend.md  index.md  security.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
scripts/: bump-version.sh
specs/: README.md
specs/001-database-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-jwt-validation/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+50 files in other folders)
