[project]
name = "faceplate-backend"
version = "0.1.0"
description = "Agentic chat interface backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "mcp>=1.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
    "watchtower>=3.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "migrations", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"alembic/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
